@@ -246,6 +246,7 @@ DEFINE REWIND 42100003
 DEFINE FSEEK 42100004
 DEFINE FGETC 42100100
 DEFINE FPUTC 42100200
+DEFINE HAL_MEM 42110000
 
 # 0OP Group
 DEFINE NOP 00000000
