@@ -23,6 +23,7 @@ Added EXECUTE to stage2 forth
 Added ABORT to stage2 forth
 Added string print and address to output of High level prototype disassembler
 Added initial prototype library for forth developers who want better ANS support
+Expanded stage0 VM Halcode to provide a way to lookup total amount of physical memory
 
 ** Changed
 Extended VPATH in makefile to shorten dependency names
